k8s/odoo/service-public-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-public-backend
  namespace: esm
spec:
  type: ClusterIP
  selector:
    app: odoo-public
  ports:
    - port: 80
      targetPort: 8069
      protocol: TCP
