k8s/odoo/service-vpn.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-vpn
  namespace: esm
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internal"
spec:
  type: LoadBalancer
  selector:
    app: odoo
  ports:
    - port: 80
      targetPort: 8069
      protocol: TCP
