k8s/odoo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo
  namespace: esm
spec:
  type: ClusterIP
  selector:
    app: odoo
  ports:
    - port: 80
      targetPort: 8069
      protocol: TCP
