k8s/odoo/ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odoo-internal
  namespace: odoo-private
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: esm-internal
    alb.ingress.kubernetes.io/group.order: "10"
    alb.ingress.kubernetes.io/healthcheck-path: /web/login
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /odoo
            pathType: Prefix
            backend:
              service:
                name: odoo
                port:
                  number: 80
          - path: /web
            pathType: Prefix
            backend:
              service:
                name: odoo-private-backend
                port:
                  number: 80
